--- a/onlinecourse/templates/onlinecourse/course_detail_bootstrap.html
+++ b/onlinecourse/templates/onlinecourse/course_detail_bootstrap.html
@@ -76,24 +76,48 @@
             -->
 
             <!-- A choice submission form example -->
-            <form id="questionform" action="point to a submit view" method="post">
-                        ... for each question in the course ...
-                        <div class="card mt-1">
-                            <div class="card-header"><h5>{{ question.question_text}}</h5></div>
-                            {% csrf_token %}
-                            <div class="form-group">
-                               ... for each choice in the question ...
-                                <div class="form-check">
-                                    <label class="form-check-label">
-                                        <input type="checkbox" name="choice_{{choice.id}}"
-                                               class="form-check-input" id="{{choice.id}}"
-                                               value="{{choice.id}}">{{ choice.choice_text }}
-                                    </label>
-                                </div>
+            
+
+            {% block content %}
+            <div class="container">
+                <h1>{{ course.title }}</h1>
+                <p>{{ course.description }}</p>
+            
+                {% if user.is_authenticated %}
+                <button class="btn btn-primary" type="button" data-toggle="collapse" data-target="#examCollapse" aria-expanded="false" aria-controls="examCollapse">
+                    Развернуть экзамен
+                </button>
+                <div class="collapse mt-3" id="examCollapse">
+                    <form method="post" action="{% url 'onlinecourse:submit_exam' course.id %}">
+                        {% csrf_token %}
+                        {% for question in exam_questions %}
+                        <div class="card mb-3">
+                            <div class="card-header">
+                                <h5 class="mb-0">
+                                    <input type="checkbox" name="selected_questions" value="{{ question.id }}"> Вопрос {{ forloop.counter }}
+                                </h5>
+                            </div>
+                            <div class="card-body">
+                                <h6>{{ question.text }}</h6>
+                                <ul class="list-group">
+                                    {% for choice in question.choices %}
+                                    <li class="list-group-item">
+                                        <label>
+                                            <input type="checkbox" name="selected_choices_{{ question.id }}" value="{{ choice.id }}"> {{ choice.text }}
+                                        </label>
+                                    </li>
+                                    {% endfor %}
+                                </ul>
                             </div>
                         </div>
-                    <input class="btn btn-success btn-block" type="submit" value="Submit">
-            </form>
+                        {% endfor %}
+                        <button type="submit" class="btn btn-primary">Отправить</button>
+                    </form>
+                </div>
+                {% endif %}
+            </div>
+            {% endblock %}
+            
 
             <!--Check here to see more details Bootstrap checkbox
              https://www.w3schools.com/bootstrap4/bootstrap_forms_inputs.asp-->
